@@ -264,4 +264,5 @@ Added to Epsilon Questline.
 
 Added texture to andesite, diorite, granite, tuff Gravel.
 Added texture to block of raw aluminum, lead, silver, nickel, uranium.
+Added soulium recipe from sifting soul sand.
 Removed unused items from original Infinite Horizons modpack.
